<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonthViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuButtonName"
            android:onClick="openMenu"/>

        <Button
            android:id="@+id/btnWeekView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="weeklyAction"
            android:text="@string/weekViewButtonText"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLastMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="previousMonthAction"
                android:text="@string/back"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnNextMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nextMonthAction"
                android:text="@string/forward"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMondayMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mondayColumnName"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvTuesdayMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesdayColumnName"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvWednesdayMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesdayColumnName"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvThursdayMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursdayColumnName"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvFridayMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:text="@string/fridayColumnName"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvSaturdayMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturdayColumnName"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSundayMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sundayColumnName"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calenderRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openEventEdit"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/calendar_symbol"
        android:contentDescription="@string/btnEventDescription" />
</RelativeLayout>